优化配置文件1

--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,14 @@
 [path]
 
-#初始化日志路径
-logdir="D:\log"   
+#初始化日志路径(个人)
+logdir="D:\log"
 
-#项目路径
-project_root="D:/android_airtest"
+#初始化日志路径(公司)
+#logdir="C:\log"
 
-host = 255.255.255.0
 
-proxy = 6037
+#项目路径(个人)
+project_root="D:\android_airtest"
 
-password = 123456
-
-pool = true
-
-time = 3
+#项目路径(公司)
+#project_root = "C:\airtest_script\"
