--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,14 @@
+
+
+
+
 [path]
 
 #初始化日志路径(个人)
-#logdir="D:\log"
+#logdir="D:\android_airtest\log"
 
 #初始化日志路径(公司)
-logdir=C:\log
+logdir=C:\airtest_script\log
 
 
 #项目路径(个人)
@@ -12,3 +16,12 @@ logdir=C:\log
 
 #项目路径(公司)
 project_root = C:\airtest_script\
+
+
+[filename]
+
+#运行日志文件
+logfile = log.txt
+
+#输出报告文件
+output= C:\airtest_script\log\log.html
