--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 makers=
-	docs: docs module
-	apk:
-	safety_inspection:
-	schedule_management:
+	docs
+	apk
+	safety_inspection
+	schedule_management
